[package]
name = "frac"
version = "0.1.0"
authors = ["William <willmcpherson2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.quicksilver]
version = "0.4.0-alpha0.6"
default-features = false
features = ["easy-log", "event-cache"]
